--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.12",
+    "multer": "^1.4.2",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
