--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "mongoose": "^5.11.12",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "react-router-dom": "^5.2.0"
+    "react-fade-in": "^2.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-scroll": "^1.8.2",
+    "react-tilt": "^0.1.4"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
