--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "react-fade-in": "^2.0.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scroll": "^1.8.2",
     "react-tilt": "^0.1.4"
